# Gently-nix

./: .bazelrc  .gitignore  CLAUDE.md  Cargo.toml  README.md  SKILLS.md  SWARM-SKILLS.md  WORKSPACE.bazel  flake.nix
app/: INTEGRATION_PLAN.md  PHASE8_INTEGRATION_PLAN.md  main.js  package-lock.json  package.json  preload.js  setup.html  shell.html
app/components/: AIComparisonChat.jsx  App.jsx  Authentication.jsx
app/docs/: PHASE8_API_REFERENCE.md
app/inject/: stamp-inject.js
app/lib/: action-server-client.js  agent-system.js  architect-client.js  artisan-client.js  audio-client.js  avatar-studio-client.js  behavior-client.js  bluetooth-client.js  brain-client.js  bridge-client.js  btc-client.js  bucket-client.js  button-maker-client.js  cipher-client.js  cli-bridge.js  codie-client.js  commerce-client.js  controller-client.js  core-client.js  dance-client.js  dns-client.js  doc-client.js  face-tracking-client.js  feed-client.js  gateway-client.js  ged-client.js  gmail-client.js  goo-client.js  hotkey-menu-client.js  huggingface-client.js  inference-client.js  intro-creator-client.js  ipfs-client.js  kaggle-client.js  livepeer-client.js  mcp-client.js  micro-client.js  miner-client.js  model-hub-client.js  network-client.js  (+19 more)
app/renderer/: shell.js
app/styles/: shell.css
binaries/gently-cli/: Cargo.toml
binaries/gently-cli/src/: main.rs
binaries/gentlyos-tui/: Cargo.toml
binaries/gentlyos-tui/src/: main.rs
btc-data/: mining_pools.json
community/: FORK.md  UPSTREAM.md  registry.json
config/: configuration.nix  hardware-configuration.nix
contracts/solana/: Anchor.toml  Cargo.toml
crates/application/gently-architect/: Cargo.toml
crates/application/gently-architect/src/: lib.rs
crates/application/gently-commerce/: Cargo.toml
crates/application/gently-commerce/src/: lib.rs
crates/application/gently-document/: Cargo.toml
crates/application/gently-document/src/: lib.rs
crates/application/gently-gooey/: Cargo.toml
crates/application/gently-gooey/src/: lib.rs
crates/application/gently-google/: Cargo.toml
crates/application/gently-google/src/: lib.rs
crates/application/gently-tiktok/: Cargo.toml
crates/application/gently-tiktok/src/: lib.rs
crates/application/gently-web/: Cargo.toml
crates/application/gently-web/src/: lib.rs
crates/foundation/gently-audio/: Cargo.toml
crates/foundation/gently-audio/src/: lib.rs
crates/foundation/gently-core/: Cargo.toml
crates/foundation/gently-core/src/: app_config.rs  layer.rs  lib.rs  mask.rs  shelf.rs
crates/foundation/gently-goo/: Cargo.toml
crates/foundation/gently-goo/src/: lib.rs
crates/foundation/gently-synth/: Cargo.toml
crates/foundation/gently-synth/src/: lib.rs  tier.rs
crates/intelligence/gently-agents/: Cargo.toml
crates/intelligence/gently-agents/src/: lib.rs
crates/intelligence/gently-behavior/: Cargo.toml
crates/intelligence/gently-behavior/src/: lib.rs
crates/intelligence/gently-brain/: Cargo.toml
crates/intelligence/gently-brain/src/: lib.rs
crates/intelligence/gently-ged/: Cargo.toml
crates/intelligence/gently-ged/src/: lib.rs
crates/intelligence/gently-mcp/: Cargo.toml
crates/intelligence/gently-mcp/src/: lib.rs
crates/intelligence/gently-micro/: Cargo.toml
crates/intelligence/gently-micro/src/: lib.rs
crates/knowledge/gently-alexandria/: Cargo.toml
crates/knowledge/gently-alexandria/src/: lib.rs
crates/knowledge/gently-feed/: Cargo.toml
crates/knowledge/gently-feed/src/: lib.rs
crates/knowledge/gently-search/: Cargo.toml
crates/knowledge/gently-search/src/: lib.rs
crates/network/gently-bridge/: Cargo.toml
crates/network/gently-bridge/src/: lib.rs
crates/network/gently-dance/: Cargo.toml
crates/network/gently-dance/src/: lib.rs
crates/network/gently-gateway/: Cargo.toml
crates/network/gently-gateway/src/: lib.rs
crates/network/gently-livepeer/: Cargo.toml
crates/network/gently-livepeer/src/: lib.rs
crates/network/gently-network/: Cargo.toml
crates/network/gently-network/src/: lib.rs
docs/: BIBLE.md.save  BLAST-RADIUS-REPORT.md  CLAUDE_COMPILED.md  DOCS-README.md  GENTLYOS-ARCHITECTURE.md  GENTLY_BUSINESS_AUTOMATION_FEED_VIBE.md  GentlyOS_Virtual_Organization_System.docx  GentlyOS_Workspace_System.docx  Gently_Studio_Protocols.docx  Google_Infrastructure_Research.docx  INTEGRATION-SCOPE.md  REPORT.md
docs/prototypes/: gentlyos-v14.html  gentlyos-v6.html
iso/: bootloader.nix  default.nix  partitions.nix
mining/: headless-miner.js  mine.sh
modules/: env-validation.nix  gently-app.nix  tier-gate.nix
modules/boot/: order.nix  stage-1.nix  stage-2.nix
modules/hardware/: detect.nix  drivers.nix
modules/install/: auto-install.nix  disk-setup.nix
modules/profiles/: agents.nix  base.nix  docker.nix  limbo.nix  wine.nix  workbench.nix
modules/session/: gently-session.nix
nixos/: flake.nix
profiles/: dev.nix  full.nix  minimal.nix  rescue.nix
scripts/: build-iso.sh  download_minimax.py  flash-usb.sh  test-vm.sh
sdk/: GENTLYOS_ARCHITECTURE.md  GENTLYOS_MASTER_ARCHITECTURE.md
sdk/architecture/: conversation_branching_architecture.md  olo_guard_architecture.md  olo_guard_v2_architecture.md  olo_hybrid_architecture.md  olo_simple_architecture.md
sdk/electron/: main.js  package-lock.json  package.json  setup.html  shell.html  start-gently.sh
sdk/electron-app/: package.json  preload.js
sdk/models/: gematria_roll.py  gently_boot_logic.py  gently_model.py  gently_windows.py
sdk/nixos/: flake.nix  gently-app.nix  hardware.nix
sdk/nixos-config/: configuration.nix  home.nix
sdk/prototypes/: gently_blend.html  gently_crystallized.html  gently_playground.html  gently_playground_v2.html  gently_possibilities.html  gently_sdk_workbench.html  gently_shell_v3.html  gently_sovereignty_stack.html  gently_sovereignty_stack_v2.html  gently_workbench.html  gently_workbench_hardlocked.html  olo_display.html  olo_guard_terminal.html  olo_proton_shell.html  olo_proton_v2.html
sdk/python-models/: gematria_roll.sh  gematria_roll_v2.py  gently_clans.py  gently_tiers.py  stamp.py  (+1 more)
tools/monitor/: Cargo.toml
(+59 files in other folders)
