[workspace]
resolver = "2"
members = [
    # TIER 0: FOUNDATION (bone) - Crypto primitives, core types
    "crates/foundation/gently-core",
    "crates/foundation/gently-codie",    # CODIE: 12-keyword instruction language
    "crates/foundation/gently-artisan",  # BS-ARTISAN: Toroidal knowledge storage
    "crates/foundation/gently-audio",
    "crates/foundation/gently-visual",
    "crates/foundation/gently-goo",      # SYNTHESTASIA: GOO Field unified distance field engine

    # TIER 1-2: KNOWLEDGE (blob) - Data layer
    "crates/knowledge/gently-feed",
    "crates/knowledge/gently-alexandria",
    "crates/knowledge/gently-search",
    "crates/knowledge/gently-btc",
    "crates/knowledge/gently-ipfs",

    # TIER 3: INTELLIGENCE (cali) - AI/reasoning layer
    "crates/intelligence/gently-brain",
    "crates/intelligence/gently-inference",
    "crates/intelligence/gently-agents",  # Agentic scaffold: tool-using AI agents
    "crates/intelligence/gently-micro",
    "crates/intelligence/gently-mcp",
    "crates/intelligence/gently-ged",     # SYNTHESTASIA: G.E.D. Generative Educational Device
    "crates/intelligence/gently-behavior", # SYNTHESTASIA: Behavioral learning + adaptive UI

    # TIER 4: SECURITY (fence) - Protection layer
    "crates/security/gently-security",
    "crates/security/gently-cipher",
    "crates/security/gently-guardian",
    "crates/security/gently-sim",
    "crates/security/gently-sploit",

    # TIER 5: NETWORK (bark) - Communication layer
    "crates/network/gently-network",
    "crates/network/gently-gateway",
    "crates/network/gently-bridge",   # IPC Bridge: Limbo Layer communication (port 7335)
    "crates/network/gently-dance",

    # TIER 6: APPLICATION (biz) - User-facing layer
    "crates/application/gently-web",
    "crates/application/gently-architect",
    "crates/application/gently-document", # SYNTHESTASIA: Three-chain document engine
    "crates/application/gently-gooey",    # SYNTHESTASIA: GOOEY 2D application builder
    "crates/application/gently-commerce", # SYNTHESTASIA: Vibe commerce + TradingView

    # BINARIES (pug) - Entry points
    "binaries/gently-cli",
    "binaries/gentlyos-tui",

    # DISABLED CRATES (turk)
    # "archive/gently-spl",  # Solana dependency version conflicts
    # "archive/gently-py",   # PyO3 doesn't support musl-linux (Alpine)
]

[workspace.package]
version = "1.0.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/gentlyos/gentlyos"

[workspace.dependencies]
# Crypto
sha2 = "0.10"
hmac = "0.12"
hkdf = "0.12"
rand = "0.8"
zeroize = { version = "=1.3.0", features = ["zeroize_derive"] }
argon2 = "0.5"
chacha20poly1305 = "0.10"
getrandom = "0.2"

# Audio
cpal = "0.15"
dasp = "0.11"
rustfft = "6.1"

# Visual
svg = "0.17"

# Math (for gently-goo)
nalgebra = "0.32"

# Blockchain
bitcoin = "0.31"
solana-sdk = "1.17"
solana-client = "1.17"

# Async
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# CLI
clap = { version = "4.4", features = ["derive"] }
crossterm = "0.27"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"

# Internal crates - Foundation (TIER 0)
gently-core = { path = "crates/foundation/gently-core" }
gently-codie = { path = "crates/foundation/gently-codie" }
gently-artisan = { path = "crates/foundation/gently-artisan" }
gently-audio = { path = "crates/foundation/gently-audio" }
gently-visual = { path = "crates/foundation/gently-visual" }
gently-goo = { path = "crates/foundation/gently-goo" }

# Internal crates - Knowledge (TIER 1-2)
gently-feed = { path = "crates/knowledge/gently-feed" }
gently-alexandria = { path = "crates/knowledge/gently-alexandria" }
gently-search = { path = "crates/knowledge/gently-search" }
gently-btc = { path = "crates/knowledge/gently-btc" }
gently-ipfs = { path = "crates/knowledge/gently-ipfs" }

# Internal crates - Intelligence (TIER 3)
gently-brain = { path = "crates/intelligence/gently-brain" }
gently-inference = { path = "crates/intelligence/gently-inference" }
gently-agents = { path = "crates/intelligence/gently-agents" }
gently-micro = { path = "crates/intelligence/gently-micro" }
gently-mcp = { path = "crates/intelligence/gently-mcp" }
gently-ged = { path = "crates/intelligence/gently-ged" }
gently-behavior = { path = "crates/intelligence/gently-behavior" }

# Internal crates - Security (TIER 4)
gently-security = { path = "crates/security/gently-security" }
gently-cipher = { path = "crates/security/gently-cipher" }
gently-guardian = { path = "crates/security/gently-guardian" }
gently-sim = { path = "crates/security/gently-sim" }
gently-sploit = { path = "crates/security/gently-sploit" }

# Internal crates - Network (TIER 5)
gently-network = { path = "crates/network/gently-network" }
gently-gateway = { path = "crates/network/gently-gateway" }
gently-bridge = { path = "crates/network/gently-bridge" }
gently-dance = { path = "crates/network/gently-dance" }

# Internal crates - Application (TIER 6)
gently-web = { path = "crates/application/gently-web" }
gently-architect = { path = "crates/application/gently-architect" }
gently-document = { path = "crates/application/gently-document" }
gently-gooey = { path = "crates/application/gently-gooey" }
gently-commerce = { path = "crates/application/gently-commerce" }

# Disabled crates
# gently-spl excluded: Solana dependency version conflicts
# gently-py excluded: PyO3 doesn't support musl-linux

# Additional dependencies for new crates
ipfs-api-backend-hyper = "0.6"
cid = "0.11"
multihash = "0.19"
futures = "0.3"
base64 = "0.21"
serde_yaml = "0.9"
ort = { version = "2.0", features = ["load-dynamic"] }
dirs = "5.0"
indicatif = "0.17"
reqwest = { version = "0.11", features = ["stream"] }
ratatui = "0.28"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
regex = "1.10"
jsonrpc-core = "18"
tokio-tungstenite = "0.21"

# Cipher dependencies
sha1 = "0.10"
md-5 = "0.10"
md4 = "0.10"
bs58 = "0.5"
lazy_static = "1.4"
hex = "0.4"

# Network security dependencies
pcap = "1.1"
pcsc = "2"
pnet = "0.34"
httparse = "1.8"
rustls = "0.22"
rcgen = "0.12"
hyper = { version = "1.1", features = ["full"] }
hyper-util = "0.1"
http-body-util = "0.1"
trust-dns-resolver = "0.23"

# Release profile optimizations
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"

[profile.release-small]
inherits = "release"
opt-level = "z"
lto = true
strip = true
