[package]
name = "gently-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "GentlyOS command-line interface"

[[bin]]
name = "gently"
path = "src/main.rs"

[dependencies]
clap.workspace = true
gently-core.workspace = true
gently-codie.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
serde_json.workspace = true
