[package]
name = "angel-watch"
version = "1.0.0"
edition = "2021"
description = "Git branch monitor and health checker for GentlyOS"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.35", features = ["full"] }
