[package]
name = "gently-document"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Three-chain document engine"

[dependencies]
gently-core.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
thiserror.workspace = true
