[package]
name = "gently-gooey"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "GOOEY 2D application builder"

[dependencies]
gently-core.workspace = true
gently-visual.workspace = true
serde.workspace = true
serde_json.workspace = true
crossterm.workspace = true
thiserror.workspace = true
