[package]
name = "gently-google"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Google APIs - YouTube, Ads, Analytics"

[dependencies]
gently-core.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
chrono.workspace = true
thiserror.workspace = true
async-trait.workspace = true
