[package]
name = "gently-tiktok"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "TikTok posting infrastructure"

[dependencies]
gently-core.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
chrono.workspace = true
thiserror.workspace = true
async-trait.workspace = true
