[package]
name = "gently-web"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "HTMX-first web interface"

[dependencies]
gently-core.workspace = true
hyper.workspace = true
hyper-util.workspace = true
http-body-util.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
