[package]
name = "gently-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "GentlyOS Core - Foundation types and cryptographic primitives"

[dependencies]
sha2.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
zeroize.workspace = true
hex.workspace = true
