[package]
name = "gently-agents"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Five-element agent pipeline"

[dependencies]
gently-core.workspace = true
gently-brain.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
thiserror.workspace = true
