[package]
name = "gently-brain"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "LLM orchestration layer"

[dependencies]
gently-core.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
async-trait.workspace = true
thiserror.workspace = true
