[package]
name = "gently-ged"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Generative Educational Device"

[dependencies]
gently-core.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true
async-trait.workspace = true
