[package]
name = "gently-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Model Context Protocol"

[dependencies]
gently-core.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true
async-trait.workspace = true
