[package]
name = "gently-micro"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Microservice framework"

[dependencies]
gently-core.workspace = true
tokio.workspace = true
hyper.workspace = true
hyper-util.workspace = true
http-body-util.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
