[package]
name = "gently-alexandria"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Knowledge graph and library"

[dependencies]
gently-core.workspace = true
gently-artisan.workspace = true
serde.workspace = true
serde_json.workspace = true
rusqlite.workspace = true
thiserror.workspace = true
