[package]
name = "gently-feed"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Content feed chain system"

[dependencies]
gently-core.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
chrono.workspace = true
thiserror.workspace = true
async-trait.workspace = true
