[package]
name = "gently-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "IPC Bridge - Limbo Layer (port 7335)"

[dependencies]
gently-core.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio-tungstenite.workspace = true
thiserror.workspace = true
async-trait.workspace = true
