[package]
name = "gently-livepeer"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Livepeer decentralized video transcoding"

[dependencies]
gently-core.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true
async-trait.workspace = true
chrono.workspace = true
