[package]
name = "gently-network"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Network core"

[dependencies]
gently-core.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
async-trait.workspace = true
rustls.workspace = true
